# NSU_LABS

./: .gitignore  README.md
oop-basics/: .gitignore
oop-basics/BitArray/: README.md  bitArray.cpp
oop-basics/CsvParser/: CsvParserTests.cpp  ParserExceptions.h  README.md
oop-basics/GameOfLife/: game.h  gameTests.cpp
oop-basics/SimpleCSVParser/: README.md  main.cpp  writeCSV.h
oop-basics/SoundProcessor/: Converters.cpp  Parser.cpp  WavHandler.cpp
oop-basics/lab0a/: CMakeLists.txt  CMakePresets.json  module1.cpp
oop-basics/lab0b/: CMakeLists.txt  fileData.cpp  fileData.h  main.cpp  writeCSV.cpp  writeCSV.h
oop-basics/lab1/: CMakeLists.txt  bitArray.cpp  bitArray.h  bitArrayTest.cpp  main.cpp
oop-basics/lab2/: CMakeLists.txt  cell.cpp  cell.h  commandParser.cpp  commandParser.h  game.cpp  game.h  gameTests.cpp  main.cpp
oop-basics/lab3/: CMakeLists.txt  Converters.cpp  Converters.h  Exceptions.h  Parser.cpp  Parser.h  SoundProcessor.cpp  SoundProcessor.h  WavHandler.cpp  WavHandler.h  main.cpp  processorTests.cpp  sound
oop-basics/lab4/: CMakeLists.txt  CsvParser.h  CsvParserTests.cpp  ParserExceptions.h  TuplePrinter.h  TupleReader.h  main.cpp
oop-cpp/BitArray/: README.md  bitArray.h
oop-cpp/CsvParser/: TupleReader.h  main.cpp
oop-cpp/GameOfLife/: README.md  cell.h
oop-cpp/SimpleCSVParser/: CMakeLists.txt
oop-cpp/SoundProcessor/: Converters.h  README.md  SoundProcessor.cpp  main.cpp
oop-cpp/lab0a/: main.cpp
oop-java/: README.md
oop-java/Calculator/: README.md  build.gradle.kts
oop-java/CarFactory/: .gitignore  build.gradle.kts  (+1 more)
(+200 files in other folders)
